@@ -12,6 +12,8 @@ Version 2.4.4-Beta 1
     * Current track applet: show number of artists instead of genres. (BR 261077)
 
   BUGFIXES:
+    * Fixed issue where the Context View wrench was not created when the
+      Context View had no applets. (BR 280382)
     * Fixed off-by-one error in organize collection dialog.
     * Fixed issue that made TagGuesser dialog to forget setings. (BR 280288)
     * Fixed tags guessing from full file path. (BR 264302)
